Fixed text overflowing

--- a/styles.css
+++ b/styles.css
@@ -8,58 +8,64 @@ body {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column;
   background: #1c1c1c;
   margin: 0 auto;
-  padding: 0px;
   align-items:center;
-  justify-content:flex-end;
-  max-width: 300px;
+  justify-content:space-evenly;
+  width: 350px;
   height: auto;
   border-radius: 15px;
 }
 .display {
   display:flex;
+  flex:1;
+  flex-wrap: wrap;
   flex-direction: column;
   align-items: flex-end;
   color: white;
-  width: 90%;
+  width: 80%;
   min-height: 150px;
   padding: 10px;
+  overflow-wrap: anywhere;
+  text-align: right;
 }
 
 .equation{
   flex: 1;
-  font-size: 40px;
+  font-size: 35px;
   margin:0px;
-  padding: 0px
+  padding: 0px;
+  padding-top: 15px;
+  overflow-wrap:anywhere;
 }
 
 .answer{
   flex: 1;
   size: 100%;
-  font-size: 80px;
+  font-size: 70px;
   margin: 0px;
   padding: 0px;
 }
 
 .buttons{
+  flex: 1;
   display:flex;
   align-items: center;
   justify-content: center;
   align-self:center;
   justify-self:center;
-  /* flex-wrap:wrap; */
   flex-direction: column;
   padding-bottom: 20px;
 }
 
 button {
-  width:50px;
-  height: 50px;
+  width: 60px;
+  height: 60px;
   color:white;
   text-align: center;
-  flex: 0 0 50px;
+  flex: 1 0 50px;
   font-size: 30px;
   background: #505050;
   border: 0px solid #ff9600;
